# shop-saver

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.python  Dockerfile.rust  QUICK_START.md  README  README-Docker.md  README.md  ROADMAP.md  chain_names.json  docker-compose.yml  init.sql  setup.sh  shop-saver-documentation.md
.github/workflows/: ci.yml  security.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md  setup.ps1  shop-saver-api.service  store_items_query.sql
backend/migrations/: 0001_initial_schema.sql  0002_price_history.sql  001_add_store_locations.sql
backend/src/: api.rs  database.rs  main.rs  main_new.rs  models.rs  xml_processor.rs
docs/plans/: 2026-03-10-ui-redesign-design.md  2026-03-10-ui-redesign.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.test.tsx  App.tsx  index.tsx  setupTests.ts
frontend/src/components/: Header.tsx  ItemCard.tsx  SearchFilters.tsx
frontend/src/services/: api.ts
scripts/: security_check.sh
service/: Dockerfile  StoreDownloader.py  cronjob  geocode_stores.py  main.py  requestZip.py  run_pipeline.sh  storesJsonUrl.py
service/downloaders/: StoreDownloader.py  __init__.py  base.py  carrefour.py  ceberus.py  cerberus.py  dor_alon.py  good_pharm.py  king.py  maayan.py  mega.py  one.py  original.py  osher_ad.py  rami_levy.py  shufersal.py  tiv_taam.py  victory.py  yohananof.py  zol_vegadol.py
service/tests/: test_base_extraction.py  test_url_generation.py
(+10 files in other folders)
